# agenda-simple-ejemplo

./: .gitignore  README.md  agenda-simple.py  agenda.py  agenda_cli.py  agenda_simple.py  contacto.py  pyproject.toml  runscript.sh
src/agenda_simple/: __init__.py  agenda.py  agenda_cli.py
src/agenda_simple/agenda/: __init__.py
