[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agenda_simple"
version = "0.0.3"
authors = [
  { name="Diego Serrano", email="diegosg448@gmail.com" },
]
description = "A simple agenda code sample"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/cursos-cualtos/agenda-simple-ejemplo"
Issues = "https://github.com/cursos-cualtos/agenda-simple-ejemplo/issues"